Fixed alignment issues

--- a/styles/index.css
+++ b/styles/index.css
@@ -22,14 +22,14 @@ header>div {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    
+
 }
 
 .top_nav_list {
     display: flex;
     flex-direction: row;
     gap: 2rem;
-    padding: 0 2rem;
+    padding-left: 2rem;
 }
 
 header a,
@@ -61,9 +61,6 @@ ol {
 
 .section_one {
     padding: 6rem 0px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
 }
 
 .section_one .container {
@@ -75,7 +72,6 @@ ol {
 
 .section_one>div div {
     flex: 1 1 0px;
-    max-width: 100%;
 }
 
 .section_one>div>div>div * {
@@ -95,7 +91,7 @@ ol {
     max-height: 75%;
 }
 
-.section_two .container{
+.section_two .container {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -138,10 +134,6 @@ menu img {
 }
 
 .section_four {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     padding: 6rem 0px;
 }
 
@@ -186,7 +178,7 @@ footer {
 }
 
 @media (max-width: 830px) {
-    .section_one .container{
+    .section_one .container {
         flex-direction: column;
         gap: 2rem;
     }
